--- a/index.html
+++ b/index.html
@@ -63,6 +63,127 @@
         #right h3{
             padding: 10px 5px 3px 0px;
         }
+        @media screen and (max-width:1156px) {
+            *{
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        div{
+            text-align: left;
+        }
+        body{
+            margin: 0px;
+            padding: 0px;
+            justify-content: center;
+            display: flex;
+            align-items: center
+        }
+        .container{
+            background-color:rgb(230, 222, 212);
+            width:70%;
+            margin: 40px;
+            padding: 30px;
+            border: 2px solid black;
+        }
+        h1{
+            text-align: center;
+        }
+        .verticalLine{
+            border-left: 2px solid black;
+            margin-top:20px ;
+            height: 900px;
+            left: 43%;
+            position: absolute;
+        }
+
+        #left{
+            float: left;
+            width: 40%;
+            padding-top: 15px;
+            padding-left: 0px;
+        }
+        #left h2{
+            padding: 5px 5px 5px 0px;
+        }
+        #left h3{
+            padding: 5px 5px 0px 0px;
+        }
+        #right{
+            font-size: 15px;
+            padding-top: 15px;  
+            padding-left: 25px;
+            width: 48%;
+            float: left;
+        }
+        #right h2{
+            padding: 5px 5px 5px 0px;
+        }
+        #right h3{
+            padding: 10px 5px 3px 0px;
+        }
+        }
+        @media screen and (max-width:600px) {
+            *{
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        div{
+            text-align: left;
+        }
+        body{
+            margin: 0px;
+            padding: 0px;
+            justify-content: center;
+            display: flex;
+            align-items: center
+        }
+        .container{
+            background-color:rgb(237, 233, 228);
+            width:100%;
+            margin: 10px;
+            padding: 10px;
+            border: 2px solid black;
+        }
+        h1{
+            text-align: center;
+        }
+        .verticalLine{
+            border-left: 2px solid black;
+            margin-top:20px ;
+            height: 850px;
+            left: 43%;
+            position: absolute;
+        }
+
+        #left{
+            font-size: 16px;
+            float: left;
+            width: 40%;
+            padding-top: 15px;
+            padding-left: 15px;
+        }
+        #left h2{
+            padding: 5px 5px 5px 0px;
+        }
+        #left h3{
+            padding: 5px 5px 0px 0px;
+        }
+        #right{
+            font-size: 14px;
+            padding-top: 15px;  
+            padding-left: 25px;
+            width: 48%;
+            float: left;
+        }
+        #right h2{
+            padding: 5px 5px 5px 0px;
+        }
+        #right h3{
+            padding: 10px 5px 3px 0px;
+        }
+        }
     </style>
 </head>
 <body>    
@@ -96,12 +217,12 @@
         <p><h3>10th</h3>
             Percentage:100%,<br>
             Sri Chaitanya School,<br>
-            Kompally,Hyderabad,Telangana.<br>
+            Kompally,Hyderabad,<br>Telangana.<br>
             <h3>Intermediate:</h3>
             Percentage:97.7%,<br>
             MPC,<br>
             Narayana College,<br>
-            Adibhatla,Hyderabad,Telangana.<br>
+            Adibhatla,Hyderabad,<br>Telangana.<br>
             <h3>Bachelor Of Technology:</h3>
             Computer Science (AI&ML),<br>
             2022-2026,<br>
