--- a/index.html
+++ b/index.html
@@ -92,6 +92,66 @@
         .verticalLine{
             border-left: 2px solid black;
             margin-top:20px ;
+            height: 800px;
+            left: 43%;
+            position: absolute;
+        }
+
+        #left{
+            float: left;
+            width: 40%;
+            padding-top: 15px;
+            padding-left: 0px;
+        }
+        #left h2{
+            padding: 5px 5px 5px 0px;
+        }
+        #left h3{
+            padding: 5px 5px 0px 0px;
+        }
+        #right{
+            font-size: 15px;
+            padding-top: 15px;  
+            padding-left: 25px;
+            width: 48%;
+            float: left;
+        }
+        #right h2{
+            padding: 5px 5px 5px 0px;
+        }
+        #right h3{
+            padding: 10px 5px 3px 0px;
+        }
+        }
+        @media screen and (max-width:816px) {
+            *{
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        div{
+            text-align: left;
+        }
+        body{
+            margin: 0px;
+            padding: 0px;
+            justify-content: center;
+            display: flex;
+            align-items: center
+        }
+        .container{
+            background-color:rgb(230, 222, 212);
+            width:70%;
+            margin: 40px;
+            padding: 30px;
+            border: 2px solid black;
+        }
+        h1{
+            text-align: center;
+        }
+        .verticalLine{
+            border-left: 2px solid black;
+            margin-top:20px ;
             height: 900px;
             left: 43%;
             position: absolute;
@@ -152,8 +212,8 @@
         .verticalLine{
             border-left: 2px solid black;
             margin-top:20px ;
-            height: 850px;
-            left: 43%;
+            max-height:700px;
+            left: 44%;
             position: absolute;
         }
 
@@ -170,7 +230,7 @@
         }
         #left h3{
             font-size: 16px;
-            padding: 5px 5px 0px 0px;
+            padding: 5px 5px 5px 0px;
         }
         #right{
             font-size: 14px;
@@ -180,10 +240,78 @@
             float: left;
         }
         #right h2{
+            font-size: 17px;
             padding: 5px 5px 5px 0px;
         }
         #right h3{
-            padding: 10px 5px 3px 0px;
+            font-size: 16px;
+            padding: 5px 5px 3px 0px;
+        }
+        }
+        @media screen and (max-width:357px) {
+            *{
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        div{
+            text-align: left;
+        }
+        body{
+            margin: 0px;
+            padding: 0px;
+            justify-content: center;
+            display: flex;
+            align-items: center
+        }
+        .container{
+            background-color:rgb(237, 233, 228);
+            width:100%;
+            margin: 0px;
+            padding: 0px;
+            border: 2px solid black;
+        }
+        h1{
+            text-align: center;
+        }
+        .verticalLine{
+            display: flex;
+            border-left: 2px solid black;
+            margin-top:20px ;
+            max-height:900px;
+            left: 44%;
+            position:none;
+        }
+
+        #left{
+            font-size: 15px;
+            float: left;
+            width: 40%;
+            padding-top: 15px;
+            padding-left: 10px;
+        }
+        #left h2{
+            font-size: 17px;
+            padding: 5px 5px 5px 0px;
+        }
+        #left h3{
+            font-size: 16px;
+            padding: 5px 5px 5px 0px;
+        }
+        #right{
+            font-size: 14px;
+            padding-top: 15px;  
+            padding-left: 25px;
+            width: 48%;
+            float: left;
+        }
+        #right h2{
+            font-size: 17px;
+            padding: 5px 5px 5px 0px;
+        }
+        #right h3{
+            font-size: 16px;
+            padding: 5px 5px 3px 0px;
         }
         }
     </style>
